refactoring code base
